@@ -54,9 +54,9 @@ test.run(arguments = 'f1.out f3.out')
 
 test.run(arguments = 'f1.out f2.out f3.out f4.out',
          stdout = test.wrap_stdout("""\
-scons: "f1.out" is up to date.
+scons: `f1.out' is up to date.
 build("f2.out", "f2.in")
-scons: "f3.out" is up to date.
+scons: `f3.out' is up to date.
 build("f4.out", "f4.in")
 """))
 
@@ -70,9 +70,9 @@ os.utime(test.workpath('f3.in'),
 test.run(arguments = 'f1.out f2.out f3.out f4.out',
          stdout = test.wrap_stdout("""\
 build("f1.out", "f1.in")
-scons: "f2.out" is up to date.
+scons: `f2.out' is up to date.
 build("f3.out", "f3.in")
-scons: "f4.out" is up to date.
+scons: `f4.out' is up to date.
 """))
 
 test.write('SConstruct', """
@@ -97,9 +97,9 @@ test.run(arguments = 'f1.out f3.out')
 
 test.run(arguments = 'f1.out f2.out f3.out f4.out',
          stdout = test.wrap_stdout("""\
-scons: "f1.out" is up to date.
+scons: `f1.out' is up to date.
 build("f2.out", "f2.in")
-scons: "f3.out" is up to date.
+scons: `f3.out' is up to date.
 build("f4.out", "f4.in")
 """))
 
@@ -110,8 +110,7 @@ os.utime(test.workpath('f3.in'),
          (os.path.getatime(test.workpath('f3.in')),
           os.path.getmtime(test.workpath('f3.in'))+10))
 
-test.run(arguments = 'f1.out f2.out f3.out f4.out',
-         stdout = test.wrap_stdout('scons: "f1.out" is up to date.\nscons: "f2.out" is up to date.\nscons: "f3.out" is up to date.\nscons: "f4.out" is up to date.\n'))
+test.up_to_date(arguments = 'f1.out f2.out f3.out f4.out')
 
 test.write('SConstruct', """
 def build(env, target, source):
@@ -124,13 +123,7 @@ env.B(target = 'f3.out', source = 'f3.in')
 env.B(target = 'f4.out', source = 'f4.in')
 """)
 
-test.run(arguments = 'f1.out f2.out f3.out f4.out',
-         stdout = test.wrap_stdout("""\
-scons: "f1.out" is up to date.
-scons: "f2.out" is up to date.
-scons: "f3.out" is up to date.
-scons: "f4.out" is up to date.
-"""))
+test.up_to_date(arguments = 'f1.out f2.out f3.out f4.out')
 
 test.pass_test()
 
