@@ -67,23 +67,23 @@ print GetBuildPath('..')
 
 test.run(arguments = '-C sub .',
 	 stdout = test.wrap_stdout(read_str = '%s\n' % wpath,
-	                           build_str = 'scons: "." is up to date.\n'))
+	                           build_str = "scons: `.' is up to date.\n"))
 
 test.run(arguments = '-C sub -C dir .',
 	 stdout = test.wrap_stdout(read_str = '%s\n' % wpath_sub,
-	                           build_str = 'scons: "." is up to date.\n'))
+	                           build_str = "scons: `.' is up to date.\n"))
 
 test.run(arguments = ".",
 	 stdout = test.wrap_stdout(read_str = 'SConstruct %s\n' % wpath,
-	                           build_str = 'scons: "." is up to date.\n'))
+	                           build_str = "scons: `.' is up to date.\n"))
 
 test.run(arguments = '--directory=sub/dir .',
 	 stdout = test.wrap_stdout(read_str = '%s\n' % wpath_sub,
-	                           build_str = 'scons: "." is up to date.\n'))
+	                           build_str = "scons: `.' is up to date.\n"))
 
 test.run(arguments = '-C %s -C %s .' % (wpath_sub_dir, wpath_sub),
 	 stdout = test.wrap_stdout(read_str = '%s\n' % wpath,
-	                           build_str = 'scons: "." is up to date.\n'))
+	                           build_str = "scons: `.' is up to date.\n"))
 
 test.pass_test()
  
