@@ -53,11 +53,11 @@ print bar.variable
 
 test.run(arguments = '-I sub1 -I sub2 .',
          stdout = test.wrap_stdout(read_str = 'sub1/foo\nsub2/bar\n',
-	                           build_str = 'scons: "." is up to date.\n'))
+	                           build_str = "scons: `.' is up to date.\n"))
 
 test.run(arguments = '--include-dir=sub2 --include-dir=sub1 .',
 	 stdout = test.wrap_stdout(read_str = 'sub2/foo\nsub2/bar\n',
-	                           build_str = 'scons: "." is up to date.\n'))
+	                           build_str = "scons: `.' is up to date.\n"))
 
 test.pass_test()
  
