@@ -68,9 +68,9 @@ test.run(arguments = 'f1.out f3.out')
 
 test.run(arguments = 'f1.out f2.out f3.out f4.out',
          stdout = test.wrap_stdout("""\
-scons: "f1.out" is up to date.
+scons: `f1.out' is up to date.
 build("f2.out", "f2.in")
-scons: "f3.out" is up to date.
+scons: `f3.out' is up to date.
 build("f4.out", "f4.in")
 """))
 
@@ -84,9 +84,9 @@ os.utime(test.workpath('f3.in'),
 test.run(arguments = 'f1.out f2.out f3.out f4.out',
          stdout = test.wrap_stdout("""\
 build("f1.out", "f1.in")
-scons: "f2.out" is up to date.
+scons: `f2.out' is up to date.
 build("f3.out", "f3.in")
-scons: "f4.out" is up to date.
+scons: `f4.out' is up to date.
 """))
 
 
